--- a/version02.css
+++ b/version02.css
@@ -19,7 +19,7 @@
   padding: 0 20px;
   align-items: center;
   font-size: 14px;
-  position: fixed;
+  position: relative;
   right: 0;
   top: 0;
   left: 50%;
